// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input render matches last snapshot 1`] = `
.c0 {
  display: block;
  box-sizing: border-box;
  outline: none;
  border: none;
  border-bottom: 1px solid #C7C7C7;
  padding: 0.5rem;
  font-size: 1rem;
  font-family: "Gentona","Montserrat";
  -webkit-transition: 0.3s ease all;
  transition: 0.3s ease all;
  color: #272727;
}

.c0:active,
.c0:focus {
  border-bottom: 2px solid #019144;
}

.c0:active + label,
.c0:focus + label {
  color: #019144;
}

<Input
  name="example"
  onChange={[Function]}
  type="text"
  value="Hello"
>
  <StyledInput
    name="example"
    onChange={[Function]}
    theme={
      Object {
        "action": Object {
          "dark": Object {
            "RGB": "0,47,108",
            "hex": "#002F6C",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "98,194,248",
            "hex": "#62C2F8",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "1,87,155",
            "hex": "#01579B",
            "on": "#FFFFFF",
          },
        },
        "background": Object {
          "RGB": "246,246,246",
          "hex": "#F6F6F6",
        },
        "black": Object {
          "main": Object {
            "RGB": "39,39,39",
            "hex": "#272727",
            "on": "#FFFFFF",
          },
          "tint20": Object {
            "RGB": "236,236,236",
            "hex": "#ECECEC",
            "on": "#272727",
          },
          "tint40": Object {
            "RGB": "199,199,199",
            "hex": "#C7C7C7",
            "on": "#272727",
          },
          "tint60": Object {
            "RGB": "160,160,160",
            "hex": "#A0A0A0",
            "on": "#FFFFFF",
          },
          "tint80": Object {
            "RGB": "105,105,105",
            "hex": "#696969",
            "on": "#FFFFFF",
          },
        },
        "complimentary": Object {
          "dark": Object {
            "RGB": "250,175,64",
            "hex": "#FAAF40",
            "on": "#272727",
          },
          "light": Object {
            "RGB": "249,240,21",
            "hex": "#F9F015",
            "on": "#272727",
          },
          "main": Object {
            "RGB": "253,216,53",
            "hex": "#FDD835",
            "on": "#272727",
          },
        },
        "error": Object {
          "dark": Object {
            "RGB": "143,6,6",
            "hex": "#8F0606",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "220,16,16",
            "hex": "#DC1010",
            "on": "#FFFFFF",
          },
        },
        "primary": Object {
          "dark": Object {
            "RGB": "11,102,54",
            "hex": "#0B6636",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "145,208,62",
            "hex": "#91D03E",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "1,145,68",
            "hex": "#019144",
            "on": "#FFFFFF",
          },
        },
        "secondary": Object {
          "dark": Object {
            "RGB": "72,140,155",
            "hex": "#488C9B",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "162,235,252",
            "hex": "#A2EBFC",
            "on": "#272727",
          },
          "main": Object {
            "RGB": "118,182,196",
            "hex": "#76B6C4",
            "on": "#FFFFFF",
          },
        },
        "surface": Object {
          "RGB": "255,255,255",
          "hex": "#FFFFFF",
          "on": "#272727",
        },
        "white": Object {
          "RGB": "255,255,255",
          "hex": "#FFFFFF",
          "on": "#272727",
        },
      }
    }
    type="text"
    value="Hello"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "_foldedDefaultProps": Object {
            "theme": Object {
              "action": Object {
                "dark": Object {
                  "RGB": "0,47,108",
                  "hex": "#002F6C",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "98,194,248",
                  "hex": "#62C2F8",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "1,87,155",
                  "hex": "#01579B",
                  "on": "#FFFFFF",
                },
              },
              "background": Object {
                "RGB": "246,246,246",
                "hex": "#F6F6F6",
              },
              "black": Object {
                "main": Object {
                  "RGB": "39,39,39",
                  "hex": "#272727",
                  "on": "#FFFFFF",
                },
                "tint20": Object {
                  "RGB": "236,236,236",
                  "hex": "#ECECEC",
                  "on": "#272727",
                },
                "tint40": Object {
                  "RGB": "199,199,199",
                  "hex": "#C7C7C7",
                  "on": "#272727",
                },
                "tint60": Object {
                  "RGB": "160,160,160",
                  "hex": "#A0A0A0",
                  "on": "#FFFFFF",
                },
                "tint80": Object {
                  "RGB": "105,105,105",
                  "hex": "#696969",
                  "on": "#FFFFFF",
                },
              },
              "complimentary": Object {
                "dark": Object {
                  "RGB": "250,175,64",
                  "hex": "#FAAF40",
                  "on": "#272727",
                },
                "light": Object {
                  "RGB": "249,240,21",
                  "hex": "#F9F015",
                  "on": "#272727",
                },
                "main": Object {
                  "RGB": "253,216,53",
                  "hex": "#FDD835",
                  "on": "#272727",
                },
              },
              "error": Object {
                "dark": Object {
                  "RGB": "143,6,6",
                  "hex": "#8F0606",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "220,16,16",
                  "hex": "#DC1010",
                  "on": "#FFFFFF",
                },
              },
              "primary": Object {
                "dark": Object {
                  "RGB": "11,102,54",
                  "hex": "#0B6636",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "145,208,62",
                  "hex": "#91D03E",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "1,145,68",
                  "hex": "#019144",
                  "on": "#FFFFFF",
                },
              },
              "secondary": Object {
                "dark": Object {
                  "RGB": "72,140,155",
                  "hex": "#488C9B",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "162,235,252",
                  "hex": "#A2EBFC",
                  "on": "#272727",
                },
                "main": Object {
                  "RGB": "118,182,196",
                  "hex": "#76B6C4",
                  "on": "#FFFFFF",
                },
              },
              "surface": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
              "white": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
            },
          },
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Input__StyledInput-t9th37-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "display:block;box-sizing:border-box;outline:none;border:none;border-bottom:1px solid ",
              [Function],
              ";padding:0.5rem;font-size:1rem;font-family:\\"Gentona\\",\\"Montserrat\\";transition:0.3s ease all;color:",
              [Function],
              ";:active,:focus{border-bottom:2px solid ",
              [Function],
              ";+ label{color:",
              [Function],
              ";}}",
            ],
          },
          "displayName": "StyledInput",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Input__StyledInput-t9th37-0",
          "target": "input",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      name="example"
      onChange={[Function]}
      theme={
        Object {
          "action": Object {
            "dark": Object {
              "RGB": "0,47,108",
              "hex": "#002F6C",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "98,194,248",
              "hex": "#62C2F8",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "1,87,155",
              "hex": "#01579B",
              "on": "#FFFFFF",
            },
          },
          "background": Object {
            "RGB": "246,246,246",
            "hex": "#F6F6F6",
          },
          "black": Object {
            "main": Object {
              "RGB": "39,39,39",
              "hex": "#272727",
              "on": "#FFFFFF",
            },
            "tint20": Object {
              "RGB": "236,236,236",
              "hex": "#ECECEC",
              "on": "#272727",
            },
            "tint40": Object {
              "RGB": "199,199,199",
              "hex": "#C7C7C7",
              "on": "#272727",
            },
            "tint60": Object {
              "RGB": "160,160,160",
              "hex": "#A0A0A0",
              "on": "#FFFFFF",
            },
            "tint80": Object {
              "RGB": "105,105,105",
              "hex": "#696969",
              "on": "#FFFFFF",
            },
          },
          "complimentary": Object {
            "dark": Object {
              "RGB": "250,175,64",
              "hex": "#FAAF40",
              "on": "#272727",
            },
            "light": Object {
              "RGB": "249,240,21",
              "hex": "#F9F015",
              "on": "#272727",
            },
            "main": Object {
              "RGB": "253,216,53",
              "hex": "#FDD835",
              "on": "#272727",
            },
          },
          "error": Object {
            "dark": Object {
              "RGB": "143,6,6",
              "hex": "#8F0606",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "220,16,16",
              "hex": "#DC1010",
              "on": "#FFFFFF",
            },
          },
          "primary": Object {
            "dark": Object {
              "RGB": "11,102,54",
              "hex": "#0B6636",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "145,208,62",
              "hex": "#91D03E",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "1,145,68",
              "hex": "#019144",
              "on": "#FFFFFF",
            },
          },
          "secondary": Object {
            "dark": Object {
              "RGB": "72,140,155",
              "hex": "#488C9B",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "162,235,252",
              "hex": "#A2EBFC",
              "on": "#272727",
            },
            "main": Object {
              "RGB": "118,182,196",
              "hex": "#76B6C4",
              "on": "#FFFFFF",
            },
          },
          "surface": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
          "white": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
        }
      }
      type="text"
      value="Hello"
    >
      <input
        className="c0"
        name="example"
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </StyledComponent>
  </StyledInput>
</Input>
`;

exports[`Input render matches last snapshot with multiline 1`] = `
.c0 {
  display: block;
  box-sizing: border-box;
  outline: none;
  border: 1px solid #C7C7C7;
  padding: 0.5rem;
  font-size: 1rem;
  font-family: "Gentona","Montserrat";
  -webkit-transition: 0.3s ease all;
  transition: 0.3s ease all;
  color: #272727;
  border-radius: 5px;
  margin-top: 0.5rem;
  height: 10rem;
  border-bottom: 1px solid #C7C7C7;
}

.c0:active,
.c0:focus {
  border-bottom: 2px solid #019144;
}

.c0:active + label,
.c0:focus + label {
  color: #019144;
}

<Input
  multiLine={true}
  name="example"
  onChange={[Function]}
  type="text"
  value="Hello"
>
  <StyledInput
    name="example"
    onChange={[Function]}
    theme={
      Object {
        "action": Object {
          "dark": Object {
            "RGB": "0,47,108",
            "hex": "#002F6C",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "98,194,248",
            "hex": "#62C2F8",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "1,87,155",
            "hex": "#01579B",
            "on": "#FFFFFF",
          },
        },
        "background": Object {
          "RGB": "246,246,246",
          "hex": "#F6F6F6",
        },
        "black": Object {
          "main": Object {
            "RGB": "39,39,39",
            "hex": "#272727",
            "on": "#FFFFFF",
          },
          "tint20": Object {
            "RGB": "236,236,236",
            "hex": "#ECECEC",
            "on": "#272727",
          },
          "tint40": Object {
            "RGB": "199,199,199",
            "hex": "#C7C7C7",
            "on": "#272727",
          },
          "tint60": Object {
            "RGB": "160,160,160",
            "hex": "#A0A0A0",
            "on": "#FFFFFF",
          },
          "tint80": Object {
            "RGB": "105,105,105",
            "hex": "#696969",
            "on": "#FFFFFF",
          },
        },
        "complimentary": Object {
          "dark": Object {
            "RGB": "250,175,64",
            "hex": "#FAAF40",
            "on": "#272727",
          },
          "light": Object {
            "RGB": "249,240,21",
            "hex": "#F9F015",
            "on": "#272727",
          },
          "main": Object {
            "RGB": "253,216,53",
            "hex": "#FDD835",
            "on": "#272727",
          },
        },
        "error": Object {
          "dark": Object {
            "RGB": "143,6,6",
            "hex": "#8F0606",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "220,16,16",
            "hex": "#DC1010",
            "on": "#FFFFFF",
          },
        },
        "primary": Object {
          "dark": Object {
            "RGB": "11,102,54",
            "hex": "#0B6636",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "145,208,62",
            "hex": "#91D03E",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "1,145,68",
            "hex": "#019144",
            "on": "#FFFFFF",
          },
        },
        "secondary": Object {
          "dark": Object {
            "RGB": "72,140,155",
            "hex": "#488C9B",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "162,235,252",
            "hex": "#A2EBFC",
            "on": "#272727",
          },
          "main": Object {
            "RGB": "118,182,196",
            "hex": "#76B6C4",
            "on": "#FFFFFF",
          },
        },
        "surface": Object {
          "RGB": "255,255,255",
          "hex": "#FFFFFF",
          "on": "#272727",
        },
        "white": Object {
          "RGB": "255,255,255",
          "hex": "#FFFFFF",
          "on": "#272727",
        },
      }
    }
    type="text"
    value="Hello"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "_foldedDefaultProps": Object {
            "theme": Object {
              "action": Object {
                "dark": Object {
                  "RGB": "0,47,108",
                  "hex": "#002F6C",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "98,194,248",
                  "hex": "#62C2F8",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "1,87,155",
                  "hex": "#01579B",
                  "on": "#FFFFFF",
                },
              },
              "background": Object {
                "RGB": "246,246,246",
                "hex": "#F6F6F6",
              },
              "black": Object {
                "main": Object {
                  "RGB": "39,39,39",
                  "hex": "#272727",
                  "on": "#FFFFFF",
                },
                "tint20": Object {
                  "RGB": "236,236,236",
                  "hex": "#ECECEC",
                  "on": "#272727",
                },
                "tint40": Object {
                  "RGB": "199,199,199",
                  "hex": "#C7C7C7",
                  "on": "#272727",
                },
                "tint60": Object {
                  "RGB": "160,160,160",
                  "hex": "#A0A0A0",
                  "on": "#FFFFFF",
                },
                "tint80": Object {
                  "RGB": "105,105,105",
                  "hex": "#696969",
                  "on": "#FFFFFF",
                },
              },
              "complimentary": Object {
                "dark": Object {
                  "RGB": "250,175,64",
                  "hex": "#FAAF40",
                  "on": "#272727",
                },
                "light": Object {
                  "RGB": "249,240,21",
                  "hex": "#F9F015",
                  "on": "#272727",
                },
                "main": Object {
                  "RGB": "253,216,53",
                  "hex": "#FDD835",
                  "on": "#272727",
                },
              },
              "error": Object {
                "dark": Object {
                  "RGB": "143,6,6",
                  "hex": "#8F0606",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "220,16,16",
                  "hex": "#DC1010",
                  "on": "#FFFFFF",
                },
              },
              "primary": Object {
                "dark": Object {
                  "RGB": "11,102,54",
                  "hex": "#0B6636",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "145,208,62",
                  "hex": "#91D03E",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "1,145,68",
                  "hex": "#019144",
                  "on": "#FFFFFF",
                },
              },
              "secondary": Object {
                "dark": Object {
                  "RGB": "72,140,155",
                  "hex": "#488C9B",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "162,235,252",
                  "hex": "#A2EBFC",
                  "on": "#272727",
                },
                "main": Object {
                  "RGB": "118,182,196",
                  "hex": "#76B6C4",
                  "on": "#FFFFFF",
                },
              },
              "surface": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
              "white": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
            },
          },
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Input__StyledTextArea-t9th37-1",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "display:block;box-sizing:border-box;outline:none;border:1px solid ",
              [Function],
              ";padding:0.5rem;font-size:1rem;font-family:\\"Gentona\\",\\"Montserrat\\";transition:0.3s ease all;color:",
              [Function],
              ";:active,:focus{border-bottom:2px solid ",
              [Function],
              ";+ label{color:",
              [Function],
              ";}}border-radius:5px;margin-top:0.5rem;height:10rem;border-bottom:1px solid ",
              [Function],
              ";",
            ],
          },
          "displayName": "StyledInput",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Input__StyledTextArea-t9th37-1",
          "target": "textarea",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      name="example"
      onChange={[Function]}
      theme={
        Object {
          "action": Object {
            "dark": Object {
              "RGB": "0,47,108",
              "hex": "#002F6C",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "98,194,248",
              "hex": "#62C2F8",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "1,87,155",
              "hex": "#01579B",
              "on": "#FFFFFF",
            },
          },
          "background": Object {
            "RGB": "246,246,246",
            "hex": "#F6F6F6",
          },
          "black": Object {
            "main": Object {
              "RGB": "39,39,39",
              "hex": "#272727",
              "on": "#FFFFFF",
            },
            "tint20": Object {
              "RGB": "236,236,236",
              "hex": "#ECECEC",
              "on": "#272727",
            },
            "tint40": Object {
              "RGB": "199,199,199",
              "hex": "#C7C7C7",
              "on": "#272727",
            },
            "tint60": Object {
              "RGB": "160,160,160",
              "hex": "#A0A0A0",
              "on": "#FFFFFF",
            },
            "tint80": Object {
              "RGB": "105,105,105",
              "hex": "#696969",
              "on": "#FFFFFF",
            },
          },
          "complimentary": Object {
            "dark": Object {
              "RGB": "250,175,64",
              "hex": "#FAAF40",
              "on": "#272727",
            },
            "light": Object {
              "RGB": "249,240,21",
              "hex": "#F9F015",
              "on": "#272727",
            },
            "main": Object {
              "RGB": "253,216,53",
              "hex": "#FDD835",
              "on": "#272727",
            },
          },
          "error": Object {
            "dark": Object {
              "RGB": "143,6,6",
              "hex": "#8F0606",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "220,16,16",
              "hex": "#DC1010",
              "on": "#FFFFFF",
            },
          },
          "primary": Object {
            "dark": Object {
              "RGB": "11,102,54",
              "hex": "#0B6636",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "145,208,62",
              "hex": "#91D03E",
              "on": "#FFFFFF",
            },
            "main": Object {
              "RGB": "1,145,68",
              "hex": "#019144",
              "on": "#FFFFFF",
            },
          },
          "secondary": Object {
            "dark": Object {
              "RGB": "72,140,155",
              "hex": "#488C9B",
              "on": "#FFFFFF",
            },
            "light": Object {
              "RGB": "162,235,252",
              "hex": "#A2EBFC",
              "on": "#272727",
            },
            "main": Object {
              "RGB": "118,182,196",
              "hex": "#76B6C4",
              "on": "#FFFFFF",
            },
          },
          "surface": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
          "white": Object {
            "RGB": "255,255,255",
            "hex": "#FFFFFF",
            "on": "#272727",
          },
        }
      }
      type="text"
      value="Hello"
    >
      <textarea
        className="c0"
        name="example"
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </StyledComponent>
  </StyledInput>
</Input>
`;
